# human-aware-cost-functions

./: README.md
length_penalty_metrics/: CMakeLists.txt  package.xml
length_penalty_metrics/include/: length_penalty_metrics.h  speed_weighted_length_penalty_metrics.h  velocity_scaling_estimator.h
length_penalty_metrics/include/min_distance_solvers/: min_distance_solver.h  util.h
length_penalty_metrics/include/ssm15066_estimators/: parallel_ssm15066_estimator.h  parallel_ssm15066_estimator2D.h  ssm15066_estimator.h  ssm15066_estimator1D.h  ssm15066_estimator2D.h
length_penalty_metrics/src/: length_penalty_metrics.cpp  speed_weighted_length_penalty_metrics.cpp  velocity_scaling_estimator.cpp
length_penalty_metrics/src/min_distance_solvers/: min_distance_solver.cpp
length_penalty_metrics/src/ssm15066_estimators/: parallel_ssm15066_estimator.cpp  parallel_ssm15066_estimator2D.cpp  ssm15066_estimator.cpp  ssm15066_estimator1D.cpp  ssm15066_estimator2D.cpp
length_penalty_metrics/src/test/: test_length_penalty_metrics.cpp
ssm15066_estimators/: CMakeLists.txt  package.xml
ssm15066_estimators/include/min_distance_solvers/: min_distance_solver.h  util.h
ssm15066_estimators/include/ssm15066_estimators/: parallel_ssm15066_estimator2D.h  ssm15066_estimator.h  ssm15066_estimator1D.h  ssm15066_estimator2D.h
ssm15066_estimators/src/min_distance_solvers/: min_distance_solver.cpp
ssm15066_estimators/src/ssm15066_estimators/: parallel_ssm15066_estimator2D.cpp  ssm15066_estimator.cpp  ssm15066_estimator1D.cpp  ssm15066_estimator2D.cpp
