<?xml version="1.0"?>
<package format="2">
  <name>ssm15066_estimators</name>
  <version>0.0.0</version>
  <description>The ssm15066_estimators package</description>

  <maintainer email="c.tonola001@unibs.it">cesare</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>graph_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosdyn_core</build_depend>
  <build_depend>thread-pool</build_depend>
  <build_depend>length_penalty_metrics</build_depend>

  <build_export_depend>graph_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosdyn_core</build_export_depend>
  <build_export_depend>thread-pool</build_export_depend>
  <build_export_depend>length_penalty_metrics</build_export_depend>

  <exec_depend>graph_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosdyn_core</exec_depend>
  <exec_depend>thread-pool</exec_depend>
  <exec_depend>length_penalty_metrics</exec_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
